un peu de traduction

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -106,4 +106,4 @@ application.home=Home
 evaluations.proposed=Proposed evaluations
 evaluations=Evaluations
 evaluation.create.error=Error while creating evaluation
-question.answers=Answers
+question.answers=Edit answers
