--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -42,7 +42,7 @@ no.course.found=Cours non trouv\u00E9
 course.create.success=Cours cr\u00E9\u00E9 avec succ\u00E8s \!
 evaluation.startDate=Date de d\u00E9but
 evaluation.endDate=Date de fin
-evaluation.take=Faire l'\u00E9valuation
+evaluation.take=Passer l'\u00E9valuation
 evaluation.list.title=Liste des \u00E9valuations
 course=Cours
 action=Action
@@ -101,9 +101,9 @@ validation.evaluation.startDate.mandatory=La date de d\u00E9but est obligatoire
 validation.evaluation.endDate.mandatory=La date de fin est obligatoire
 validation.evaluation.startDate.after.today=La date de d\u00E9but doit etre dans le futur
 validation.evaluation.endDate.afterStartDate=La date de fin doit etre apres la date de d\u00E9but
-application.home=Home
-evaluations.proposed=Proposed evaluations
+application.home=Accueil
+evaluations.proposed=\u00E9valuations proposées
 deconnexion=D\u00E9connexion
 evaluations=Evaluations
-evaluation.create.error=Error lors de la cr\u00E9ation de l'\u00E9valuation
-question.answers=Answers
+evaluation.create.error=Erreur lors de la cr\u00E9ation de l'\u00E9valuation
+question.answers=G\u00E9rer les questions
